@@ -1,3 +1,11 @@
+2004-05-07  Paul Brook  <paul@codesourcery.com>
+
+	* config/arm/arm.h (TARGET_AAPCS_BASED): Define.
+	(TARGET_DOUBLEWORD_ALIGN): Use it.
+	(WCHAR_TYPE): Define.
+	(WCHAR_SIZE_TYPE): Define.
+	(SIZE_TYPE): Define.
+
 2004-05-06  Paul Brook  <paul@codesourcery.com>
 
 	* config/arm/arm-protots.h (vfp_mem_operand): Rename ...
